package baseline;

import javafx.event.ActionEvent;

public class ItemController {
    public void addItem(ActionEvent actionEvent) {
        /*
        create object with description set from the inputted text field
        and date set from date picker on side
        new item will be added to item list in original list object
        new item will be created and displayed in listview
         */
    }

    public void delItem(ActionEvent actionEvent) {
        /*
        click on description of item in listview to select
        delete
         */
    }

    public void editItem(ActionEvent actionEvent) {
         /*
        click on description of list in listview to select
        edit items on the side of window
         */
    }

    public void markItemComplete(ActionEvent actionEvent) {
        /*
        marks selected item as complete
         */
    }

    public void showAllItems(ActionEvent actionEvent) {
        /*
        displays entire list of items
         */
    }

    public void showIncompleteItems(ActionEvent actionEvent) {
        /*
        display items that are not marked as complete
         */
    }

    public void showCompleteItems(ActionEvent actionEvent) {
        /*
        display items that are marked as complete
         */
    }
}
