package baseline;

import javafx.event.ActionEvent;

public class ListController {
    public void addList(ActionEvent actionEvent) {
        /*
        create object with title set from the inputted text field
        new list will be created and displayed in listview
         */
    }

    public void delList(ActionEvent actionEvent) {
        /*
        click on title of list in listview to select
        delete
         */
    }

    public void editList(ActionEvent actionEvent) {
        /*
        click on title of list in listview to select
        edit items on the side of window
         */
    }

    public void saveTodoList(ActionEvent actionEvent) {
        /*
        create output file for each selected item in list
        user specifies location and name of file
        create directory for created files
         */
    }

    public void loadTodoList(ActionEvent actionEvent) {
        /*
        user loads previously saved to do list
         */
    }
}
