@startuml
'https://plantuml.com/sequence-diagram

class Application {
+main(String[] args)
+start(Stage stage)
}
class Item {
-String itemDescription;
-LocalDate itemDueDate
}

class ToDo {
-String todoTitle;
ListView<Item> itemList;
}

class ListController {
+addList
+delList
+editList
+saveTodoList
+loadTodoList
}

class ItemController {
+addItem
+delItem
+editItem
+markItemComplete
+showAllItems
+showIncompleteItems
+showCompleteItems
}

file Item.fxml {
}

file List.fxml {
}
ToDo o-- Item
Item.fxml o-- ItemController
Item.fxml o-- ToDo
List.fxml o-- ToDo

List.fxml o-- ListController
ListController o-- Item.fxml
Application o-- List.fxml
@enduml